# ditto

./: .env.example  .gitignore  Caddyfile  README.md  ditto-design.pen  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  note.md
backend/: .air.toml  .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-entrypoint.sh  go.mod  go.sum  package.json  pnpm-lock.yaml  run_tests.sh  test_api.sh  tsconfig.json
backend/cmd/server/: main.go
backend/internal/auth/: hashing.go  jwt.go
backend/internal/config/: database.go
backend/internal/constants/: auth.go
backend/internal/handlers/: account.go  account_test.go  application.go  application_test.go  assessment.go  assessment_test.go  auth.go  auth_test.go  company.go  dashboard_handler.go  export.go  extract.go  extract_test.go  file.go  file_test.go  handlers_test.go  helpers.go  interview.go  interview_note.go  interview_question.go  interview_test.go  interviewer.go  job.go  notification_handler.go  search_handler.go  timeline_handler.go  user.go
backend/internal/middleware/: csrf.go  error.go  rate_limit.go  rate_limit_test.go  security_headers.go  slow_request.go
backend/internal/models/: assessment.go  company.go  file.go  interview.go  job.go  notification.go  rate_limit.go  search.go  user.go
backend/internal/repository/: application.go  application_test.go  assessment.go  companies.go  (+29 more)
backend/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_add_users_auth_user_id_unique.down.sql  000002_add_users_auth_user_id_unique.up.sql  000003_create_rate_limits.down.sql  000003_create_rate_limits.up.sql  000004_create_file_system.down.sql  000004_create_file_system.up.sql  000005_add_job_source_fields.down.sql  000005_add_job_source_fields.up.sql  000006_fix_application_status_unique.down.sql  000006_fix_application_status_unique.up.sql  000007_create_interview_system.down.sql  000007_create_interview_system.up.sql  000008_add_interviewers_updated_at.down.sql  000008_add_interviewers_updated_at.up.sql  000009_create_assessment_system.down.sql  000009_create_assessment_system.up.sql  000010_update_assessment_status_reviewed_to_passed_failed.down.sql  000010_update_assessment_status_reviewed_to_passed_failed.up.sql  000011_create_notification_system.down.sql  000011_create_notification_system.up.sql  000012_add_search_vectors.down.sql  000012_add_search_vectors.up.sql  000013_add_performance_indexes.down.sql  000013_add_performance_indexes.up.sql  000014_seed_application_statuses.down.sql  000014_seed_application_statuses.up.sql  000015_multi_provider_auth.down.sql  000015_multi_provider_auth.up.sql  000016_add_provider_email.down.sql  000016_add_provider_email.up.sql  000017_add_draft_status.down.sql  000017_add_draft_status.up.sql  000018_add_interview_status.down.sql  000018_add_interview_status.up.sql  000019_remove_draft_status.up.sql  20250202192539_create_users_table.sql  20250203003726_updated_at_trigger.sql  20250312002238_init_schema.down.sql  (+17 more)
backend/prisma/: schema.prisma
backend/scripts/: run-tests.sh
backend/src/: app.rs  app.ts  lib.rs  main.rs  openapi.rs
backend/tests/: health_test.rs  quick_dev.rs  setup.rs  users_test.rs
(+594 files in other folders)
